--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -195,6 +195,8 @@ dependencies {
     
     implementation project(path: ':@react-native-picker_picker')
 
+    implementation project(':@react-native-async-storage')
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
